force-app/main/default/objects/PersonDetail__c/PersonDetail__c.object-meta.xml
<CustomObject>
    <label>PersonDetail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PersonDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>