force-app/main/default/objects/PersonDetail__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PersonDetails</relationshipLabel>
    <relationshipName>PersonDetails</relationshipName>
    <type>Lookup</type>
</CustomField>