force-app/main/default/objects/PersonDetail__c/fields/Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Person_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Person Email</label>
    <type>Email</type>
</CustomField>