force-app/main/default/objects/PersonDetail__c/fields/Person_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Person_Employee_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Person Employee ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>