force-app/main/default/objects/PersonDetail__c/fields/Person_Phone__c.field-meta.xml
<CustomField>
    <fullName>Person_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Person Phone</label>
    <type>Phone</type>
</CustomField>